# hello-c

./: README.md
array_and_ptr/: array_and_ptr.c
big_little_endian/: Makefile  b_l_e  big_little_endian.c
config_file/: Autoconfig.ini  Makefile  config_file.c  config_file.h  main.c
config_file_two/: Makefile  Test.ini  ini_file.c  ini_file.h  main.c
csapp_code/: CMakeLists.txt  config.h.in
csapp_code/netp/: hostinfo.c
doc/: C_C++运算符优先级.md  常见数据类型字节数.md
gdb_test/: Makefile  g_t  gdb_test.c  readme.md
getchar_func/: Makefile  g_f  getchar_func.c
glibtry/: Makefile  glibtry.c
hex_str/: hex_str.c
mariadbtry/mariadbTT/: Makefile  mariadb_hello.c  tags
mtimer/: Makefile  mtimer.c
print_format/: Makefile  p_f  print_format.c
ptr_arg/: Makefile  ptr_arg.c
threadtry/: Makefile  threadtry.c
